Fixed spacing

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -973,6 +973,9 @@ svg{
 .gap-x-4{
 	column-gap: 1rem;
 }
+.gap-x-1{
+	column-gap: 0.25rem;
+}
 .gap-x-2{
 	column-gap: 0.5rem;
 }
